corrected placement of header, collapsed td borders

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
 table {
-  border: 2px solid black;
+  border: 1px solid black;
+  border-collapse: collapse;
 }
 
 td, th {
 border: 1px solid grey;
 margin: 0px;
-padding: 0px;
+padding: 4px 3px;
+text-align: center;
 }
